<?xml version="1.0"?>
<package format="3">
  <name>robonix_nav2_terminal</name>
  <version>0.1.0</version>
  <description>Replan-persistent terminal pose control for large skid-steer robots.</description>
  <maintainer email="dev@robonix.ai">Robonix</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>action_msgs</depend>
  <depend>angles</depend>
  <depend>dwb_core</depend>
  <depend>dwb_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_2d_msgs</depend>
  <depend>nav_2d_utils</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>tf2</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
